--- a/src/css/style.css
+++ b/src/css/style.css
@@ -28,6 +28,7 @@ O body é o elemento no nosso documento responsável por ser o container de tudo
 
 body {
   min-height: 100vh;
+  background-color: #000000;
   background-image: url('https://media.discordapp.net/attachments/933358218552442951/956941256402018304/download.jpeg');
   background-position: center;
   background-repeat: no-repeat;
