--- a/src/css/style.css
+++ b/src/css/style.css
@@ -29,7 +29,7 @@ O body é o elemento no nosso documento responsável por ser o container de tudo
 body {
   min-height: 100vh;
   background-color: #000000;
-  background-image: url('https://media.discordapp.net/attachments/933358218552442951/956941256402018304/download.jpeg');
+  background-image: url('https://media.discordapp.net/attachments/982952386001776673/986006787738173440/IMG_20220613_173851.jpg');
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
