--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,12 +1,8 @@
-/* css inicio, duvidas? não me pergunte so posso dizer que css é...
-
-uma linguagem de marcação, amplamente utilizada com HTML ou XHTML, e representa diversas possibilidades para a formatação. O CSS ajuda a editar, alinhar, remover e trabalhar no espaço entre elementos de uma página.
-*/
 
 :root {
   --alinhar-logo: center;
-  --destaque: #CE6D8B;
-  --destaque-escuro: #CE6D8B;
+  --destaque: #B85870;
+  --destaque-escuro: #B85870;
   --botão1: #A020F0;
   --botão2: #00FF00;
   --botão3: #fa0000;
@@ -15,19 +11,37 @@ uma linguagem de marcação, amplamente utilizada com HTML ou XHTML, e represent
   --botão6: #6129c6;
 }
 
-/*
-HTML é a linguagem de marcação padrão para documentos projetados para serem exibidos em um navegador da web. Ele pode ser auxiliado por tecnologias como Cascading Style Sheets e linguagens de script como JavaScript.
-*/
+/* cores dos semideuses */
+.COR-A{
+ color: #AF00FF;
+}
+/* serafins */
+.COR-B{
+  color: #BF0044;
+}
+/* Querubins */
+.COR-C{
+  color: #E65589;
+}
+/* Arcanjos */
+.COR-D{
+  color: #923200;
+}
+/* Anjos da guarda */
+.COR-E{
+  color: #277ECD;
+}
+/* Construtores */
+.COR-F{
+ color: #BB812A;
+}
+
 html {
   scroll-behavior: smooth;
 }
 
-/* 
-O body é o elemento no nosso documento responsável por ser o container de tudo que é conteúdo do site. Diferente do <head>, oque está dentro do <body> é oque fica/ou ficará disponível para visualização do visitante. As informações que queremos transmitir. Títulos, Textos, Imagens
-*/
-
 body {
-  min-height: 100vh;
+min-height: 100vh;
   background-color: #000000;
   background-image: url('https://media.discordapp.net/attachments/982952386001776673/986006787738173440/IMG_20220613_173851.jpg');
   background-position: center;
@@ -36,10 +50,6 @@ body {
   background-attachment: fixed;
 }
 
-/*
-o elemento head representa uma coleção de metadados para o documento. Metadados são, como o próprio nome diz, dados sobre os dados. De forma resumida, você poderá informar o navegador alguns detalhes sobre o conteúdo da página.
-*/
-
 header.section {
   padding-top: 2rem;
   padding-bottom: 2rem;
@@ -49,9 +59,6 @@ header .navbar {
   background-color: var(--destaque);
   border-radius: 5px;
 }
-
-/* O navbar é um componente de menu que fica localizado no topo da página e normalmente contém alguns links, além de um logotipo. Para usar esse componente no Materialize, basta construir a estrutura de elementos apresentada na Listagem 2.
-*/
 
 .navbar-item,
 .navbar-link {
@@ -64,7 +71,7 @@ header .navbar {
 }
 
 .navbar-dropdown .navbar-item {
-  color: #fff;
+  color: #4a4a4a;
 }
 
 a.navbar-item:hover, a.navbar-link:hover,
@@ -72,7 +79,7 @@ a.navbar-item.is-active, a.navbar-link.is-active,
 .navbar-item.has-dropdown:hover .navbar-link,
 .navbar-item.has-dropdown.is-active .navbar-link {
   background-color: rgba(0, 0, 0, .25);
-  color: #5d5d5d; /* #fff */
+  color: #fff;
 }
 
 .navbar-link:not(.is-arrowless)::after {
@@ -86,17 +93,17 @@ a.navbar-item.is-active, a.navbar-link.is-active,
 /* inicio do css responsalvel pelo logo */
 .logo.container {
   display: flex;
-  justify-content: var(--alinhar-logo);
+  justify-content: center;
   margin-bottom: 2rem;
 }
 
 .logo.container img {
-  max-height: 100px;
-  transition: all .2s ease-out;
+  max-height: 150px;
+  transition: all .4s ease-out;
 }
 
-.logo.container img:hover {
-  transform: scale(1.1) rotate(2.5deg);
+.logo.container img:hover { 
+  transform: scale(1.2) rotate(2.9deg);
 }
 /* fim do logo */
 
@@ -140,7 +147,7 @@ footer.section {
 .article-title {
   background-color: var(--destaque);
   font-size: 1.25rem;
-  color:  #fff;
+  color: #fff;
   padding: .5rem 1rem;
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
@@ -151,7 +158,7 @@ footer.section {
 }
 
 .article-content {
-  background-color: #141517;
+  background-color: #fff;
   padding: 1rem;
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
@@ -171,7 +178,7 @@ article.footer {
   flex-direction: column;
   background-color: var(--destaque);
   padding: 1rem;
-  color:  #fff;
+  color: #fff;
   text-align: center;
   border-radius: 5px;
 }
@@ -395,424 +402,3 @@ button:hover {
     width: 80px;
   }
 }
-
-/* finap dos botoes */
-
-.cor-A2A{color: #FF7F00}
-
-/* semi-deuses */
-.cor-ABC{color: #E700FF}
-
-/* arcanjos */
-.cor-CBA{color: #8A2700}
-
-/* anjo */
-/* css inicio, duvidas? não me pergunte so posso dizer que css é...
-
-uma linguagem de marcação, amplamente utilizada com HTML ou XHTML, e representa diversas possibilidades para a formatação. O CSS ajuda a editar, alinhar, remover e trabalhar no espaço entre elementos de uma página.
-*/
-
-:root {
-  --alinhar-logo: center;
-  --destaque: #CE6D8B;
-  --destaque-escuro: #CE6D8B;
-  --botão1: #A020F0;
-  --botão2: #00FF00;
-  --botão3: #fa0000;
-  --botão4: #FF8C00;
-  --botão5: #00f6ea;
-  --botão6: #6129c6;
-}
-
-/*
-HTML é a linguagem de marcação padrão para documentos projetados para serem exibidos em um navegador da web. Ele pode ser auxiliado por tecnologias como Cascading Style Sheets e linguagens de script como JavaScript.
-*/
-html {
-  scroll-behavior: smooth;
-}
-
-/* 
-O body é o elemento no nosso documento responsável por ser o container de tudo que é conteúdo do site. Diferente do <head>, oque está dentro do <body> é oque fica/ou ficará disponível para visualização do visitante. As informações que queremos transmitir. Títulos, Textos, Imagens
-*/
-
-body {
-  min-height: 100vh;
-  background-image: url('https://media.discordapp.net/attachments/933358218552442951/956941256402018304/download.jpeg');
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-attachment: fixed;
-}
-
-/*
-o elemento head representa uma coleção de metadados para o documento. Metadados são, como o próprio nome diz, dados sobre os dados. De forma resumida, você poderá informar o navegador alguns detalhes sobre o conteúdo da página.
-*/
-
-header.section {
-  padding-top: 2rem;
-  padding-bottom: 2rem;
-}
-
-header .navbar {
-  background-color: var(--destaque);
-  border-radius: 5px;
-}
-
-/* O navbar é um componente de menu que fica localizado no topo da página e normalmente contém alguns links, além de um logotipo. Para usar esse componente no Materialize, basta construir a estrutura de elementos apresentada na Listagem 2.
-*/
-
-.navbar-item,
-.navbar-link {
-  color: #fff;
-}
-
-.navbar-item svg,
-.navbar-link svg {
-  margin-right: .25rem;
-}
-
-.navbar-dropdown .navbar-item {
-  color: #fff;
-}
-
-a.navbar-item:hover, a.navbar-link:hover,
-a.navbar-item.is-active, a.navbar-link.is-active,
-.navbar-item.has-dropdown:hover .navbar-link,
-.navbar-item.has-dropdown.is-active .navbar-link {
-  background-color: rgba(0, 0, 0, .25);
-  color: #5d5d5d; /* #fff */
-}
-
-.navbar-link:not(.is-arrowless)::after {
-  border-color: #fff;
-}
-
-.navbar-burger {
-  color: #fff !important;
-}
-
-/* inicio do css responsalvel pelo logo */
-.logo.container {
-  display: flex;
-  justify-content: var(--alinhar-logo);
-  margin-bottom: 2rem;
-}
-
-.logo.container img {
-  max-height: 100px;
-  transition: all .2s ease-out;
-}
-
-.logo.container img:hover {
-  transform: scale(1.1) rotate(2.5deg);
-}
-/* fim do logo */
-
-/* inicio do css responsalvel pelo ip */
-#ip textarea:not(.is-active) {
-  display: none;
-}
-
-#ip::before {
-  content: 'Copiado';
-  position: absolute;
-  top: calc(50% - 12px);
-  left: -90px;
-  color: #fff;
-  background-color: #48c774;
-  padding: 0 .5rem;
-  border-radius: 5px;
-  opacity: 0;
-  pointer-events: none;
-  transform: translateY(2px);
-  transition: all .25s ease;
-}
-
-#ip.is-active::before {
-  opacity: 1;
-  pointer-events: none;
-  transform: translateY(0);
-}
-/* fim do css responsalfel pelo ip */
-
-main.section,
-footer.section {
-  padding-top: 0;
-  padding-bottom: 2rem;
-}
-
-.article:not(:first-child) {
-  margin-top: 1.5rem;
-}
-
-.article-title {
-  background-color: var(--destaque);
-  font-size: 1.25rem;
-  color:  #fff;
-  padding: .5rem 1rem;
-  border-top-left-radius: 5px;
-  border-top-right-radius: 5px;
-}
-
-.article-title svg {
-  margin-right: .25rem;
-}
-
-.article-content {
-  background-color: #141517;
-  padding: 1rem;
-  border-bottom-left-radius: 5px;
-  border-bottom-right-radius: 5px;
-  /* min-height: 500px; */
-}
-
-.article-thumbnail {
-  width: 100%;
-  height: 300px;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-article.footer {
-  display: flex;
-  flex-direction: column;
-  background-color: var(--destaque);
-  padding: 1rem;
-  color:  #fff;
-  text-align: center;
-  border-radius: 5px;
-}
-
-a.is-muted {
-  color: inherit;
-  font-size: .8rem;
-  opacity: .5;
-}
-
-a.is-muted:hover {
-  opacity: 1;
-}
-
-.is-spinning {
-  animation: spin 2s infinite linear;
-}
-
-/* inicio da equipe */
-@keyframes spin {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
-}
-
-.equipe {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
-}
-.equipe li {
-  width: 33.33333%;
-  text-align: center;
-}
-
-.equipe img {
-  transition: all .2s ease;
-}
-
-.equipe li:hover img {
-  transform: translateY(-3px);
-}
-
-.equipe h1, .produtos h1 {
-  font-size: 1.5rem;
-  line-height: 1.25;
-}
-
-.equipe h2 {
-  font-weight: 600;
-  text-transform: uppercase;
-  font-size: .75rem;
-}
-
-.list {
-  background-color: unset;
-  border-radius: 0;
-  box-shadow: none;
-  margin: .5rem 0;
-}
-
-.list svg {
-  margin-right: 5px;
-  color: var(--destaque);
-}
-/* fim da equipe */
-
-  .navbar-end > .navbar-item:last-child:hover,
-  .navbar-end > .navbar-link:last-child:hover {
-    border-top-right-radius: 5px;
-    border-bottom-right-radius: 5px;
-  }
-
-  .container>.navbar .navbar-brand, .navbar>.container .navbar-brand {
-    margin-left: 0;
-  }
-
-  .container>.navbar .navbar-menu, .navbar>.container .navbar-menu {
-    margin-right: 0;
-  }
-    .equipe li:nth-child(3n):not(:last-child) {
-    margin-bottom: 2rem;
-  }
-}
-
-@media screen and (max-width: 1023px) {
-  .logo.container {
-    justify-content: center;
-  }
-}
-  .navbar-menu {
-    background: var(--destaque-escuro);
-    border-bottom-left-radius: 5px;
-    border-bottom-right-radius: 5px;
-  }
-
-  .navbar-dropdown .navbar-item {
-    color: #fff;
-  }
-
-  #ip::before {
-    left: unset;
-    right: .5rem;
-  }
-
-  .article-thumbnail {
-    height: 200px;
-  }
-
-@media screen and (max-width: 768px) {
-  .equipe li {
-    width: 50%;
-  }
-  .equipe li:nth-child(2n):not(:last-child) {
-    margin-bottom: 2rem;
-  }
-}
-
-/* inicio dos botoes */
-button {
-  cursor: pointer;
-  text-align: center;
-  border-radius: 0.5rem;
-  font-family: "Poppins", sans-serif;
-  color: #fff;
-  margin: 1.5rem 1rem;
-  background-color: white;
-  border-style: none;
-  font-size: 1.5rem;
-  padding: 0.2rem 1rem;
-  -webkit-filter: drop-shadow(8px 8px 1px #e4e4e4);
-          filter: drop-shadow(8px 8px 1px #e4e4e4);
-  -webkit-transition: 0.1s;
-  transition: 0.3s;
-}
-
-button:hover {
-  border-radius: 0.4rem;
-  -webkit-filter: drop-shadow(1px 1px 1px #e4e4e4);
-          filter: drop-shadow(1px 1px 1px #e4e4e4);
-}
-
-.btn1 {
-  background-color: var(--botão1);
-  -webkit-filter: drop-shadow(8px 8px 1px #9400D3);
-          filter: drop-shadow(8px 8px 1px #9400D3);
-}
-
-.btn1:hover {
-  -webkit-filter: drop-shadow(1px 1px 1px #9400D3);
-          filter: drop-shadow(1px 1px 1px #9400D3);
-}
-.btn2 {
-  background-color: var(--botão2);
-  -webkit-filter: drop-shadow(8px 8px 1px #008000);
-          filter: drop-shadow(8px 8px 1px #008000);
-}
-
-.btn2:hover {
-  -webkit-filter: drop-shadow(1px 1px 1px #008000);
-          filter: drop-shadow(1px 1px 1px #008000);
-}
-.btn3 {
-  background-color: var(--botão3);
-  -webkit-filter: drop-shadow(8px 8px 1px #ff2c2c);
-          filter: drop-shadow(8px 8px 1px #ff2c2c);
-}
-
-.btn3:hover {
-  -webkit-filter: drop-shadow(1px 1px 1px #ff2c2c);
-          filter: drop-shadow(1px 1px 1px #ff2c2c);
-}
-.btn4 {
-  background-color: var(--botão4);
-  -webkit-filter: drop-shadow(8px 8px 1px #FFA500);
-          filter: drop-shadow(8px 8px 1px #FFA500);
-}
-
-.btn4:hover {
-  -webkit-filter: drop-shadow(1px 1px 1px #FFA700);
-          filter: drop-shadow(1px 1px 1px #FFA700);
-}
-
-.btn5 {
-  background-color: var(--botão5);
-  -webkit-filter: drop-shadow(8px 8px 1px #00c2da);
-          filter: drop-shadow(8px 8px 1px #00c2da);
-}
-
-.btn5:hover {
-  -webkit-filter: drop-shadow(1px 1px 1px #00c2da);
-          filter: drop-shadow(1px 1px 1px #00c2da);
-}
-.btn6 {
-  background-color: var(--botão6);
-  -webkit-filter: drop-shadow(8px 8px 1px #c200fa);
-          filter: drop-shadow(8px 8px 1px #c200fa);
-}
-
-.btn6:hover {
-  -webkit-filter: drop-shadow(1px 1px 1px #c200fa);
-          filter: drop-shadow(1px 1px 1px #c200fa);
-}
-
-.btn7 {
-  background-color: var(--botão6);
-  -webkit-filter: drop-shadow(8px 8px 1px #E700FF);
-          filter: drop-shadow(8px 8px 1px #E700FF);
-}
-
-.btn7:hover {
-  -webkit-filter: drop-shadow(1px 1px 1px #c200fa);
-          filter: drop-shadow(1px 1px 1px #c200fa);
-}
-
-@media screen and (max-width: 800px) {
-  .buttons {
-    width: 80px;
-  }
-}
-
-/* finap dos botoes */
-
-.cor-A2A{color: #FF7F00}
-
-/* semi-deuses */
-.cor-ABC{color: #E700FF}
-
-/* arcanjos */
-.cor-CBA{color: #8A2700}
-
-/* anjo */
-.cor-CBC{color: #0055FF}
