add script cloudflare and update css

--- a/docs/src/css/global.css
+++ b/docs/src/css/global.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap');
 
-@import url('https://fonts.googleapis.com/css?family=MedievalSharp');
+@import url('https://fonts.googleapis.com/css2?family=MedievalSharp&display=swap');
 
 @import url('https://fonts.googleapis.com/css2?family=UnifrakturMaguntia&display=swap');
 
@@ -38,12 +38,11 @@ header.section {
 
 a {
   color: #fff;
-  font-family: Gill Sans, sans-serif;
+  font-family: 'MedievalSharp', cursive;
   text-decoration: none;
 }
 
-a:active,
-a:hover {
+a:active, a:hover {
   text-decoration: none;
   color: black;
 }
@@ -109,7 +108,7 @@ a:hover {
 
 .footer a {
   color: #fff;
-  font-family: Gill Sans, sans-serif;
+  font-family: 'MedievalSharp', cursive;
   font-size: 12px;
   text-decoration: none;
 }
