--- a/docs/src/css/global.css
+++ b/docs/src/css/global.css
@@ -327,14 +327,14 @@ label {
 }
 
 .rank-card {
-  width: calc(33.33% - 20px);
+  width: 30%;
   align-items: center;
   align-content: center;
-  margin-bottom: 5px;
-  margin-right: 5px;
-  padding: 5px;
-  border-radius: 14px;
-  background-image: url('https://cdn.discordapp.com/attachments/1077666564880486503/1103428679071174686/Antique_Vintage_Fundo_De_Papel_Envelhecido.jpg');
+  margin-bottom: 10px;
+  margin-right: 10px;
+  padding: 20px;
+  border-radius: 20px;
+  background-image: url('../img/vote_card.png');
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   text-align: center;
 }
