--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -311,15 +311,12 @@ label {
   }
 }
 
-@media screen and (max-width: 1023px) {
-    
+@media (min-width: 768px) {
+  main.cards {
+    display: grid;
+    justify-content: center; 
+    align-items: center;
+    grid-template-columns: repeat(2, 1fr); 
+    grid-gap: 20px;
+  }
 }
-
-@media screen and (max-width: 1023px) {
-    
-}
-
-@media screen and (max-width: 1023px) {
-    
-}
-
