--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -1,3 +1,8 @@
+@import url("components/loading.css");
+@import url("components/news.css");
+@import url("components/header.css");
+@import url("components/navbar.css");
+
 @import 'https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css';
 
 @import 'https://fonts.googleapis.com/css2?family=MedievalSharp&display=swap';
@@ -5,7 +10,7 @@
 :root {
   --layout: #8a2be2;
   --layout-dark: #483d8b;
-  --text-color-primary: #fff;
+  --text-color: #fff;
 }
 
 html, body {
@@ -16,51 +21,6 @@ html, body {
   font-family: 'MedievalSharp', cursive;
   background-color: black;
   box-sizing: border-box;
-}
-
-.newes {
-  display: flex;
-  padding: 5px;
-  justify-content: center;
-  border-bottom: 1px solid #ccc;
-  background: linear-gradient(to bottom, var(--layout), var(--layout-dark));
-}
-
-.newes span {
-  text-align: center;
-  color: var(--text-color-primary);
-  font-size: 10px;
-}
-
-#loading {
-  position: fixed;
-  z-index: 9999;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: transparent;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.spinner {
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  border: 5px solid var(--layout);
-  border-top-color: #333;
-  animation: spin 1s ease-in-out infinite;
-}
-
-@keyframes spin {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
 }
 
 /*
