--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -2,7 +2,7 @@
 @import url("components/news.css");
 @import url("components/header.css");
 @import url("components/navbar.css");
-@import url("components/article.css");
+@import url("components/section.css");
 @import url("components/footer.css");
 
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css");
@@ -26,21 +26,15 @@
 html, body {
   width: 100%;
   height: 100%;
-  scroll-behavior: smooth;
   font-family: 'MedievalSharp', cursive;
   background-color: black;
 }
 
-.section {
-  padding: 5px;
-  margin: 5px;
+main {
+  min-height: 100vh;
+  padding-bottom: 50px; 
 }
 
-.row {
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 20px
-}
 
 /*
 @media screen and (min-width: 320px) and (max-width: 780px) {
