--- a/website/src/components/header.astro
+++ b/website/src/components/header.astro
@@ -5,7 +5,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  background-image: url(background/header.jpeg);
+  background-image: url('https://kettraworld.vercel.app/background/header.jpeg');
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;  
