--- a/client/src/styles/components/footer.css
+++ b/client/src/styles/components/footer.css
@@ -1,5 +1,3 @@
-
-<style>
 .footer {
   position: fixed;
   bottom: 0;
@@ -9,6 +7,7 @@
   padding: 1rem;
   color: #fff;
   text-align: center;
+  border-radius: 10px;
 }
 
 .footer a {
@@ -21,8 +20,3 @@
 .footer a:active {
   color: black;
 }
-</style>
-
-<footer class="footer">
-    <a href="https://github.com/kettraworld" target="_blank"><i class="fab fa-fort-awesome"></i> Developed by the kettra team</a>
-  </footer>
