--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -7,6 +7,7 @@
 @import url("components/navbar.css");
 @import url("components/banner.css");
 @import url("components/section.css");
+@import url("components/player.css");
 @import url("components/footer.css");
 
 :root {
