--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,14 +1,16 @@
+
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css");
 
 @import url("https://fonts.googleapis.com/css2?family=MedievalSharp&display=swap");
 
-@import url("components/news.css");
-@import url("components/header.css");
-@import url("components/navbar.css");
-@import url("components/banner.css");
-@import url("components/section.css");
-@import url("components/player.css");
-@import url("components/footer.css");
+@import url(components/news.css);
+@import url(components/header.css);
+@import url(components/navbar.css);
+@import url(components/banner.css);
+@import url(components/section.css);
+@import url(components/shop.css);
+@import url(components/player.css);
+@import url(components/footer.css);
 
 :root {
   --layout: #8a2be2;
@@ -27,14 +29,13 @@
 
 html, body {
   width: 100%;
-  height: 100%;
+  height: 100vh;
   font-family: 'MedievalSharp', cursive;
   background-color: black;
 }
 
 main {
-  min-height: 100vh;
-  padding-bottom: 50px; 
+ 
 }
 
 .flex {
@@ -53,7 +54,6 @@ main {
 	border: 2px solid white;
 	text-align: center;
 	font-family: 'Panton';
-	border: 2px solid black;
 	cursor: pointer;
 }
 
